samples/_failures_safe/1761618134_8d8149_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8383604a.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_8383604a.c:165:9: error: expected expression at end of input
  165 |         case
      |         ^~~~
./samples/SAFE/__tmp_8383604a.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8383604a.c:165:9: error: expected declaration or statement at end of input
